# Parsing-app-Renova

./: .env.example  .gitignore  README.md  RELOAD_STEPS.md  docker-compose.dev-ports.yml  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.prod.yml  package.json  run_bot.py  start.bat  start.py  start.sh
backend/: Dockerfile  __init__.py  config.py  database.py  database_setup.py  db_models.py  main.py  models.py  requirements.txt  run_verify_test.py  schemas.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
nginx/: nginx.conf
output/: permits_test_2025_1.json
parsers/zillow-parsing/: .gitignore  QUICKSTART.md  README.md  README_STRUCTURE.md  pyproject.toml  start.bat  start.py  start.sh
parsers/zillow-parsing/backend/: .gitignore  README.md  database.py  main.py  models.py  parser_service.py
parsers/zillow-parsing/config/: cities_urls.json
parsers/zillow-parsing/docs/: SETUP.md  USAGE.md
parsers/zillow-parsing/frontend/: README.md  index.html  package-lock.json  package.json
parsers/zillow-parsing/frontend/src/: App.vue  api.js
parsers/zillow-parsing/frontend/src/components/: ParseHistory.vue  ParseRules.vue  UrlInput.vue
parsers/zillow-parsing/frontend/src/router/: index.js
parsers/zillow-parsing/frontend/src/views/: AllDataView.vue
parsers/zillow-parsing/scripts/parsers/: parse_from_url.py  parse_seattle_urls.py
parsers/zillow-parsing/src/core/: __init__.py  details.py  parse.py  playwright_search.py  search.py  tiling.py
scripts/: README-parsers.md  tree_project.py  (+8 more)
(+126 files in other folders)
