[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyzill"
version = '1.0.3'
description = 'Zillow scraper in Python'
authors = [
  { name="John Balvin", email="johnchristian@hotmail.es" },
]
readme= "README.md"
license = { text = "MIT" }
keywords=['zillow', 'scraper', 'crawler']
dependencies=[
    'playwright>=1.40.0',  # Основная библиотека для автоматизации браузера
    'playwright-stealth>=2.0.0',  # Обход анти-ботов
    # Старые зависимости (для обратной совместимости с API функциями)
    'curl_cffi',  # Для старых API функций (for_sale, for_rent, sold)
    'bs4',  # Для парсинга HTML в details.py
]

[project.urls]
Homepage='https://github.com/johnbalvin/pyzill'